# OpenSynth

./: .black  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  =  LICENSE  Makefile  Pipfile  README.md  _test_data.py  _test_train_energydiff.ipynb  _test_train_energydiff.py  pyproject.toml  setup.py  train_energydiff.py
.github/workflows/: check_licences.yaml  check_licenses.yaml  prod_deploy.yaml  release_branch_deploy.yaml  test_and_lint.yaml
app/: app.py
notebooks/: README.md  test_notebook.ipynb
notebooks/energydiff/: energydiff_evaluation.ipynb  energydiff_tutorial.ipynb
notebooks/faraday/: Training_Generative_Model.ipynb  faraday_evaluation.ipynb  faraday_tutorial.ipynb  gmm_batch_implementation_simplified.ipynb  gmm_implementation_simplified.ipynb  test_notebook.ipynb
notebooks/streaming/: streaming_data_preparation.ipynb  streaming_model_tutorial.ipynb
scripts/: check_gpl.sh  check_license_headers.sh  train.py
src/: fake_license.py
src/data_modules/: lcl_data_module.py
src/datasets/: datasets_utils.py  low_carbon_london.py
src/datasets/low_carbon_london/: get_data.py  preprocess_lcl.py  split_households.py
src/models/faraday/: losses.py  model.py
src/opensynth/: __init__.py
src/opensynth/data_modules/: lcl_data_module.py  streaming_data_module.py
src/opensynth/datasets/: datasets_utils.py
src/opensynth/evaluation/: __init__.py
tests/: test_app.py  utils.py
tests/data/streaming/: index.json  mean_std.csv
tests/datasets/: test_dataset_utils.py
tests/datasets/low_carbon_london/: test_preprocess_lcl.py
(+48 files in other folders)
